public/stylesheets/style.css
#content {
  text-align: center;
  padding-top: 25%;
  text-shadow: 0px 4px 3px rgba(0,0,0,0.3),
  0px 8px 13px rgba(0,0,0,0.1),
  0px 18px 23px rgba(0,0,0,0.1);
}

#bg {
  width: 100%;
  max-width: 1920px;
  background: url("../images/Dnarrow.png") no-repeat;
    background-size: 100% 100%;
  background-position: center;
  position: absolute;
  height: 100%;
  max-height: 1080px;
  z-index: -9999;
  opacity: 0.7;

}

body {
    font-family: 'Roboto', sans-serif;
    color: black;
    background: #ECE9E6; /* fallback for old browsers */
    background: -webkit-linear-gradient(to left, #ECE9E6 , #FFFFFF); /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(to left, #ECE9E6 , #FFFFFF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
}

h1 {
    font-weight: 700;
    font-size: 5em;
}

html {
    height: 100%;
}

hr {
    width: 400px;
    border-top: 1px solid black;
    border-bottom: 1px solid rgba(0,0,0,0.2);
}

.btn-success:hover{
    transform: scale(1.05);
}

.upload.icon {
  font-size: 2em;
}

.container.main {
  margin-top: 7.0em;
}

.item {
  font-size: 1.5em;
}

.menu {
  height: 50px;
  opacity: 0.9;
}

.twelve.wide {
  text-align: center;
}

#upload-input {
  display: none;
}

.huge.ui.green.button:hover {
  transform: scale(1.05);
}

.twelve h2 {
  padding-bottom: 20px;
  padding-top: 20px;
}

.ui.button {
  font-size: 1.05em;
}



/*Donut chart styling*/
svg {
    width: 100%;
    height: 100%;
}

path.slice{
    stroke-width:2px;
}

polyline{
    opacity: .3;
    stroke: black;
    stroke-width: 2px;
    fill: none;
}

.labelValue
{
    font-size: 60%;
    opacity: .5;

}

.legend text {
    font-size: 0.8em;
}

.toolTip {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    position: absolute;
    display: none;
    width: auto;
    height: auto;
    background: none repeat scroll 0 0 white;
    border: 0 none;
    border-radius: 8px 8px 8px 8px;
    box-shadow: -3px 3px 15px #888888;
    color: black;
    padding: 5px;
    text-align: center;
}


#start-form {
    text-align: center;
}




/*Make SVG responsive*/
.svg-container {
    display: inline-block;
    position: relative;
    width: 100%;
    padding-bottom: 100%; /* aspect ratio */
    vertical-align: top;
    overflow: hidden;
}
.svg-content-responsive {
    display: inline-block;
    position: absolute;
    top: 10px;
    left: 0;
}




#chartContainer {
    position: fixed;
    left: 0px;
    right: 0px;
    top: 200px;
    bottom: 0px;
}



/*=========================================*/
/*ANALYSIS ROUTE STYLES*/
/*=========================================*/

/*Hide text box, chart div, and start/stop buttons initially*/
#readPathsForm {
    display: none;
}

#startAnalysis {
    display: none;
}

#stopAnalysis {
    display: none;
}

#chartContainer {
    display: none;
}





/*=========================================*/
/*ROBOTO FONT*/
/*=========================================*/
/* cyrillic-ext */
@font-face {
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 400;
    src: local('Roboto'), local('Roboto-Regular'), url(fonts/Roboto/Roboto-Regular.ttf) format('ttf');
    unicode-range: U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
}
/* cyrillic */
@font-face {
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 400;
    src: local('Roboto'), local('Roboto-Regular'), url(fonts/Roboto/Roboto-Regular.ttf) format('ttf');
    unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
}
/* greek-ext */
@font-face {
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 400;
    src: local('Roboto'), local('Roboto-Regular'), url(fonts/Roboto/Roboto-Regular.ttf) format('ttf');
    unicode-range: U+1F00-1FFF;
}
/* greek */
@font-face {
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 400;
    src: local('Roboto'), local('Roboto-Regular'), url(fonts/Roboto/Roboto-Regular.ttf) format('ttf');
    unicode-range: U+0370-03FF;
}
/* vietnamese */
@font-face {
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 400;
    src: local('Roboto'), local('Roboto-Regular'), url(fonts/Roboto/Roboto-Regular.ttf) format('ttf');
    unicode-range: U+0102-0103, U+1EA0-1EF9, U+20AB;
}
/* latin-ext */
@font-face {
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 400;
    src: local('Roboto'), local('Roboto-Regular'), url(fonts/Roboto/Roboto-Regular.ttf) format('ttf');
    unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 400;
    src: local('Roboto'), local('Roboto-Regular'), url(fonts/Roboto/Roboto-Regular.ttf) format('ttf');
    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
}
/* cyrillic-ext */
@font-face {
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 700;
    src: local('Roboto Bold'), local('Roboto-Bold'), url(fonts/Roboto/Roboto-Bold.ttf) format('ttf');
    unicode-range: U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
}
/* cyrillic */
@font-face {
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 700;
    src: local('Roboto Bold'), local('Roboto-Bold'), url(fonts/Roboto/Roboto-Bold.ttf) format('ttf');
    unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
}
/* greek-ext */
@font-face {
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 700;
    src: local('Roboto Bold'), local('Roboto-Bold'), url(fonts/Roboto/Roboto-Bold.ttf) format('ttf');
    unicode-range: U+1F00-1FFF;
}
/* greek */
@font-face {
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 700;
    src: local('Roboto Bold'), local('Roboto-Bold'), url(fonts/Roboto/Roboto-Bold.ttf) format('ttf');
    unicode-range: U+0370-03FF;
}
/* vietnamese */
@font-face {
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 700;
    src: local('Roboto Bold'), local('Roboto-Bold'), url(fonts/Roboto/Roboto-Bold.ttf) format('ttf');
    unicode-range: U+0102-0103, U+1EA0-1EF9, U+20AB;
}
/* latin-ext */
@font-face {
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 700;
    src: local('Roboto Bold'), local('Roboto-Bold'), url(fonts/Roboto/Roboto-Bold.ttf) format('ttf');
    unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 700;
    src: local('Roboto Bold'), local('Roboto-Bold'), url(fonts/Roboto/Roboto-Bold.ttf) format('ttf');
    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
}

